Add support for GRiSP software update packages
 * Increment Kontron Al/BL iMX8M Mini system version to 0.3.0
 * Uniformize layout on eMMC and sdcard
 * Allow A/B software update on sdcard
 * Add option to build-firmware.sh to build software update packages (tarball)
 * Add sync command to the generated systems
 * Add artefact server script to server the artifacts over HTTP
 * Add Kontron firmware layout documentation

--- a/system_common/board/grisp-common/busybox.config
+++ b/system_common/board/grisp-common/busybox.config
@@ -324,7 +324,7 @@ CONFIG_SLEEP=y
 # CONFIG_FEATURE_STAT_FILESYSTEM is not set
 # CONFIG_STTY is not set
 # CONFIG_SUM is not set
-# CONFIG_SYNC is not set
+CONFIG_SYNC=y
 # CONFIG_FEATURE_SYNC_FANCY is not set
 # CONFIG_FSYNC is not set
 # CONFIG_TAC is not set
