--- a/system_kontron-albl-imx8mm/uboot/uboot.env
+++ b/system_kontron-albl-imx8mm/uboot/uboot.env
@@ -21,7 +21,6 @@ altbootcmd=run alloy_fallback;
 image_base=fitImage
 bootargs_base=rootwait console=ttymxc2,115200
 bootargs_extra=
-alloy_boot_order=mmc1 mmc0
 
 # A/B software upgrade context
 # Last known working system (a|b)
@@ -59,31 +58,24 @@ alloy_fallback=\
 	run alloy_bootcmd;
 
 alloy_bootcmd=\
-	for target in ${alloy_boot_order}; do\
-		run alloy_bootcmd_${target};\
-	done;\
+	run alloy_bootcmd_${bootmed};\
 	reset;
 
 # Boot from eMMC with A/B software upgrade
-alloy_bootcmd_mmc0=\
+alloy_bootcmd_emmc=\
 	devnum=0;\
 	devpart=2;\
 	run alloy_boot_ab;
 
-# Boot from SD card
-alloy_bootcmd_mmc1=\
+# Boot from SD card with A/B software upgrade
+alloy_bootcmd_sdcard=\
 	devnum=1;\
 	devpart=2;\
-	boot_id=sd-card;\
-	setenv active_system r;\
-	run alloy_boot_simple;
+	run alloy_boot_ab;
 
-alloy_boot_simple=\
-	setenv bootargs root=/dev/mmcblk${devnum}p3 ${bootargs_base} ${bootargs_extra} alloy.boot_id=${boot_id};\
-	saveenv\
-	if load mmc ${devnum}:${devpart} ${loadaddr} ${image_base}; then\
-		bootm ${loadaddr};\
-	fi;
+# Boot from unknown medium
+alloy_bootcmd_unknown=\
+	echo "Booting from unknown medium"
 
 # A/B boot logic - handles normal boot, upgrades, and fallbacks
 # TODO: Enable watchdog before calling bootm when upgrade validation client is implemented
@@ -108,32 +100,32 @@ alloy_boot_ab=\
 	if test ${valid_system} = a && test ${upgrade_available} = 0 && test ${upgrade_fallback} = 0; then\
 		setenv active_system a;\
 		setenv image ${image_base}_A;\
-		setenv bootargs root=/dev/mmcblk${devnum}p3 ${bootargs_base} ${bootargs_extra} alloy.boot_id=system-a;\
+		setenv bootargs root=/dev/mmcblk${devnum}p3 ${bootargs_base} ${bootargs_extra} alloy.medium=${bootmed} alloy.system=a;\
 		echo Booting system A: /dev/mmcblk${devnum}p3;\
 	elif test ${valid_system} = b && test ${upgrade_available} = 0 && test ${upgrade_fallback} = 0; then\
 		setenv active_system b;\
 		setenv image ${image_base}_B;\
-		setenv bootargs root=/dev/mmcblk${devnum}p4 ${bootargs_base} ${bootargs_extra} alloy.boot_id=system-b;\
+		setenv bootargs root=/dev/mmcblk${devnum}p4 ${bootargs_base} ${bootargs_extra} alloy.medium=${bootmed} alloy.system=b;\
 		echo Booting system B: /dev/mmcblk${devnum}p4;\
 	elif test ${valid_system} = a && test ${upgrade_fallback} -gt 0; then\
 		setenv active_system a;\
 		setenv image ${image_base}_A;\
-		setenv bootargs root=/dev/mmcblk${devnum}p3 ${bootargs_base} ${bootargs_extra}  alloy.boot_id=system-a fallback;\
+		setenv bootargs root=/dev/mmcblk${devnum}p3 ${bootargs_base} ${bootargs_extra} alloy.medium=${bootmed} alloy.system=a fallback;\
 		echo Falling back to system A: /dev/mmcblk${devnum}p3;\
 	elif test ${valid_system} = b && test ${upgrade_fallback} -gt 0; then\
 		setenv active_system b;\
 		setenv image ${image_base}_B;\
-		setenv bootargs root=/dev/mmcblk${devnum}p4 ${bootargs_base} alloy.boot_id=system-b fallback;\
+		setenv bootargs root=/dev/mmcblk${devnum}p4 ${bootargs_base} ${bootargs_extra} alloy.medium=${bootmed} alloy.system=b fallback;\
 		echo Falling back to system B: /dev/mmcblk${devnum}p4;\
 	elif test ${valid_system} = a && test ${upgrade_available} = 1; then\
 		setenv active_system b;\
 		setenv image ${image_base}_B;\
-		setenv bootargs root=/dev/mmcblk${devnum}p4 ${bootargs_base} ${bootargs_extra} alloy.boot_id=system-b alloy.upgrading=true;\
+		setenv bootargs root=/dev/mmcblk${devnum}p4 ${bootargs_base} ${bootargs_extra} alloy.medium=${bootmed} alloy.system=b alloy.upgrading=true;\
 		echo Upgrading to system B: /dev/mmcblk${devnum}p4;\
 	elif test ${valid_system} = b && test ${upgrade_available} = 1; then\
 		setenv active_system a;\
 		setenv image ${image_base}_A;\
-		setenv bootargs root=/dev/mmcblk${devnum}p3 ${bootargs_base} ${bootargs_extra} alloy.boot_id=system-a alloy.upgrading=true;\
+		setenv bootargs root=/dev/mmcblk${devnum}p3 ${bootargs_base} ${bootargs_extra} alloy.medium=${bootmed} alloy.system=a alloy.upgrading=true;\
 		echo Upgrading to system A: /dev/mmcblk${devnum}p3;\
 	else\
 		echo "FATAL: Unexpected system upgrade context";\
@@ -142,7 +134,7 @@ alloy_boot_ab=\
 		echo "  upgrade_fallback=${upgrade_fallback}";\
 		setenv active_system a;\
 		setenv image ${image_base}_A;\
-		setenv bootargs root=/dev/mmcblk${devnum}p3 ${bootargs_base} ${bootargs_extra} alloy.boot_id=system-a recovery;\
+		setenv bootargs root=/dev/mmcblk${devnum}p3 ${bootargs_base} ${bootargs_extra} alloy.medium=${bootmed} alloy.system=a recovery;\
 		echo "Emergency boot to system A: /dev/mmcblk${devnum}p3";\
 	fi\
 	saveenv\
