Add support for firmware rollback and software update status

--- a/system_kontron-albl-imx8mm/fwup.conf
+++ b/system_kontron-albl-imx8mm/fwup.conf
@@ -2,6 +2,8 @@
 
 require-fwup-version="1.4.0"
 
+define(ALLOY_ENV_VER, "1")
+
 #
 # Firmware metadata
 #
@@ -313,12 +315,19 @@ task emmc {
         uboot_setenv(uboot-env, "active_system", "a")
         uboot_setenv(uboot-env, "upgrade_available", "0")
         uboot_setenv(uboot-env, "upgrade_fallback", "0")
+        uboot_setenv(uboot-env, "rollback_available", "0")
 
         # Initialize system A metadata
         uboot_setenv(uboot-env, "systema_firmware_uuid", "\${FWUP_META_UUID}")
         uboot_setenv(uboot-env, "systema_firmware_version", ${GRISP_FW_VERSION})
         uboot_setenv(uboot-env, "systema_firmware_vcs_id", ${GRISP_FW_VCS_IDENTIFIER})
         uboot_setenv(uboot-env, "systema_firmware_author", ${GRISP_FW_AUTHOR})
+
+        # Initialize system B metadata
+        uboot_setenv(uboot-env, "systemb_firmware_uuid", "")
+        uboot_setenv(uboot-env, "systemb_firmware_version", "")
+        uboot_setenv(uboot-env, "systemb_firmware_vcs_id", "")
+        uboot_setenv(uboot-env, "systemb_firmware_author", "")
 
         # Add extra kernel parameters for RT isolation
         # CPU 3 isolated for RT, CPUs 0-2 available for normal system tasks
@@ -392,12 +401,19 @@ task sdcard {
         uboot_setenv(uboot-env, "active_system", "a")
         uboot_setenv(uboot-env, "upgrade_available", "0")
         uboot_setenv(uboot-env, "upgrade_fallback", "0")
+        uboot_setenv(uboot-env, "rollback_available", "0")
 
         # Initialize system A metadata
         uboot_setenv(uboot-env, "systema_firmware_uuid", "\${FWUP_META_UUID}")
         uboot_setenv(uboot-env, "systema_firmware_version", ${GRISP_FW_VERSION})
         uboot_setenv(uboot-env, "systema_firmware_vcs_id", ${GRISP_FW_VCS_IDENTIFIER})
         uboot_setenv(uboot-env, "systema_firmware_author", ${GRISP_FW_AUTHOR})
+
+        # Initialize system B metadata
+        uboot_setenv(uboot-env, "systemb_firmware_uuid", "")
+        uboot_setenv(uboot-env, "systemb_firmware_version", "")
+        uboot_setenv(uboot-env, "systemb_firmware_vcs_id", "")
+        uboot_setenv(uboot-env, "systemb_firmware_author", "")
 
         # Add extra kernel parameters for RT isolation
         # CPU 3 isolated for RT, CPUs 0-2 available for normal system tasks
@@ -433,6 +449,9 @@ task sdcard {
 
 # This firmware task upgrades system A when system B is currently active
 task upgrade.a {
+    # Verify environment version compatibility
+    require-uboot-variable(uboot-env, "alloy_env_ver", "${ALLOY_ENV_VER}")
+
     # Verify we are running from system B
     require-path-at-offset("/", ${EMMC_ROOTFS_B_PART_OFFSET})
 
@@ -449,6 +468,8 @@ task upgrade.a {
 
         # Any already upgraded system will be destroyed
         uboot_setenv(uboot-env, "upgrade_available", "0")
+        # Disable rollback immediately when starting an upgrade
+        uboot_setenv(uboot-env, "rollback_available", "0")
 
         # Override system A metadata
         uboot_setenv(uboot-env, "systema_firmware_uuid", "\${FWUP_META_UUID}")
@@ -481,6 +502,9 @@ task upgrade.a {
 
 # This firmware task upgrades system B when system A is currently active
 task upgrade.b {
+    # Verify environment version compatibility
+    require-uboot-variable(uboot-env, "alloy_env_ver", "${ALLOY_ENV_VER}")
+
     # Verify we are running from system A
     require-path-at-offset("/", ${EMMC_ROOTFS_A_PART_OFFSET})
 
@@ -497,6 +521,8 @@ task upgrade.b {
 
         # Any already upgraded system will be destroyed
         uboot_setenv(uboot-env, "upgrade_available", "0")
+        # Disable rollback immediately when starting an upgrade
+        uboot_setenv(uboot-env, "rollback_available", "0")
 
         # Override system B metadata
         uboot_setenv(uboot-env, "systemb_firmware_uuid", "\${FWUP_META_UUID}")
@@ -529,6 +555,7 @@ task upgrade.b {
 
 # This task handles unexpected active partition states
 task upgrade.unexpected {
+    require-uboot-variable(uboot-env, "alloy_env_ver", ${ALLOY_ENV_VER})
     require-uboot-variable(uboot-env, "system_platform", ${GRISP_FW_PLATFORM})
     require-uboot-variable(uboot-env, "system_architecture", ${GRISP_FW_ARCHITECTURE})
     on-init {
@@ -536,24 +563,30 @@ task upgrade.unexpected {
     }
 }
 
-# This task handles platform/architecture mismatches
+# This task handles env_ver/platform/architecture mismatches
 task upgrade.wrongplatform {
     on-init {
-        error("Expecting platform=${GRISP_FW_PLATFORM} and architecture=${GRISP_FW_ARCHITECTURE}")
+        error("Expecting alloy_env_ver=${ALLOY_ENV_VER}, platform=${GRISP_FW_PLATFORM} and architecture=${GRISP_FW_ARCHITECTURE}")
     }
 }
 
 # Utility task to validate the current system
 task validate.a {
+    # Verify environment version compatibility
+    require-uboot-variable(uboot-env, "alloy_env_ver", "${ALLOY_ENV_VER}")
+
+    # Verify the expected platform/architecture
+    require-uboot-variable(uboot-env, "system_platform", "${GRISP_FW_PLATFORM}")
+    require-uboot-variable(uboot-env, "system_architecture", "${GRISP_FW_ARCHITECTURE}")
+
     # Verify we are running from system A
     require-path-at-offset("/", ${EMMC_ROOTFS_A_PART_OFFSET})
 
     # Verify that partition A is currently active
     require-uboot-variable(uboot-env, "active_system", "a")
 
-    # Verify the expected platform/architecture
-    require-uboot-variable(uboot-env, "system_platform", "${GRISP_FW_PLATFORM}")
-    require-uboot-variable(uboot-env, "system_architecture", "${GRISP_FW_ARCHITECTURE}")
+    # Ensure there is something to validate
+    require-uboot-variable(uboot-env, "upgrade_available", "1")
 
     on-init {
         info("Validating system A")
@@ -561,6 +594,8 @@ task validate.a {
         uboot_setenv(uboot-env, "upgrade_fallback", "0")
         uboot_setenv(uboot-env, "valid_system", "a")
         uboot_setenv(uboot-env, "bootcount", "0")
+        # Enable rollback after successful validation
+        uboot_setenv(uboot-env, "rollback_available", "1")
     }
 
     on-finish {
@@ -569,15 +604,21 @@ task validate.a {
 }
 
 task validate.b {
+    # Verify environment version compatibility
+    require-uboot-variable(uboot-env, "alloy_env_ver", "${ALLOY_ENV_VER}")
+
+    # Verify the expected platform/architecture
+    require-uboot-variable(uboot-env, "system_platform", "${GRISP_FW_PLATFORM}")
+    require-uboot-variable(uboot-env, "system_architecture", "${GRISP_FW_ARCHITECTURE}")
+
     # Verify we are running from system B
     require-path-at-offset("/", ${EMMC_ROOTFS_B_PART_OFFSET})
 
     # Verify that partition B is currently active
     require-uboot-variable(uboot-env, "active_system", "b")
 
-    # Verify the expected platform/architecture
-    require-uboot-variable(uboot-env, "system_platform", "${GRISP_FW_PLATFORM}")
-    require-uboot-variable(uboot-env, "system_architecture", "${GRISP_FW_ARCHITECTURE}")
+    # Ensure there is something to validate
+    require-uboot-variable(uboot-env, "upgrade_available", "1")
 
     on-init {
         info("Validating system B")
@@ -585,9 +626,259 @@ task validate.b {
         uboot_setenv(uboot-env, "upgrade_fallback", "0")
         uboot_setenv(uboot-env, "valid_system", "b")
         uboot_setenv(uboot-env, "bootcount", "0")
+        # Enable rollback after successful validation
+        uboot_setenv(uboot-env, "rollback_available", "1")
     }
 
     on-finish {
         info("System B validated")
+    }
+}
+
+# This task handles validation attempts when no upgrade is pending
+task validate.unavailable {
+    require-uboot-variable(uboot-env, "alloy_env_ver", ${ALLOY_ENV_VER})
+    require-uboot-variable(uboot-env, "system_platform", ${GRISP_FW_PLATFORM})
+    require-uboot-variable(uboot-env, "system_architecture", ${GRISP_FW_ARCHITECTURE})
+    on-init {
+        error("No upgrade pending: nothing to validate.")
+    }
+}
+
+# This task handles env_ver/platform/architecture mismatches
+task validate.wrongplatform {
+    on-init {
+        error("Expecting alloy_env_ver=${ALLOY_ENV_VER}, platform=${GRISP_FW_PLATFORM} and architecture=${GRISP_FW_ARCHITECTURE}")
+    }
+}
+
+# Rollback to system A (currently running from B)
+task rollback.a {
+    # Verify environment version compatibility
+    require-uboot-variable(uboot-env, "alloy_env_ver", "${ALLOY_ENV_VER}")
+
+    # Verify the expected platform/architecture
+    require-uboot-variable(uboot-env, "system_platform", "${GRISP_FW_PLATFORM}")
+    require-uboot-variable(uboot-env, "system_architecture", "${GRISP_FW_ARCHITECTURE}")
+
+    # Verify we are running from system B
+    require-path-at-offset("/", ${EMMC_ROOTFS_B_PART_OFFSET})
+
+    # Verify that partition B is currently active
+    require-uboot-variable(uboot-env, "active_system", "b")
+
+    # Require rollback to be allowed and no pending upgrade
+    require-uboot-variable(uboot-env, "rollback_available", "1")
+    require-uboot-variable(uboot-env, "upgrade_available", "0")
+
+    on-init {
+        info("Rolling back to system A (currently running from B)")
+
+        # Select system A for next boot
+        uboot_setenv(uboot-env, "valid_system", "a")
+
+        # Reset counters/flags so normal boot path selects valid_system
+        uboot_setenv(uboot-env, "bootcount", "0")
+        uboot_setenv(uboot-env, "upgrade_available", "0")
+        uboot_setenv(uboot-env, "upgrade_fallback", "0")
+
+        # Make rollback one-shot until next successful validation
+        uboot_setenv(uboot-env, "rollback_available", "0")
+    }
+}
+
+# Rollback to system B (currently running from A)
+task rollback.b {
+    # Verify environment version compatibility
+    require-uboot-variable(uboot-env, "alloy_env_ver", "${ALLOY_ENV_VER}")
+
+    # Verify the expected platform/architecture
+    require-uboot-variable(uboot-env, "system_platform", "${GRISP_FW_PLATFORM}")
+    require-uboot-variable(uboot-env, "system_architecture", "${GRISP_FW_ARCHITECTURE}")
+
+    # Verify we are running from system A
+    require-path-at-offset("/", ${EMMC_ROOTFS_A_PART_OFFSET})
+
+    # Verify that partition A is currently active
+    require-uboot-variable(uboot-env, "active_system", "a")
+
+    # Require rollback to be allowed and no pending upgrade
+    require-uboot-variable(uboot-env, "rollback_available", "1")
+    require-uboot-variable(uboot-env, "upgrade_available", "0")
+
+    on-init {
+        info("Rolling back to system B (currently running from A)")
+
+        # Select system B for next boot
+        uboot_setenv(uboot-env, "valid_system", "b")
+
+        # Reset counters/flags so normal boot path selects valid_system
+        uboot_setenv(uboot-env, "bootcount", "0")
+        uboot_setenv(uboot-env, "upgrade_available", "0")
+        uboot_setenv(uboot-env, "upgrade_fallback", "0")
+
+        # Make rollback one-shot until next successful validation
+        uboot_setenv(uboot-env, "rollback_available", "0")
+    }
+}
+
+# This task handles rollback when it's not available/safe
+task rollback.unavailable {
+    require-uboot-variable(uboot-env, "alloy_env_ver", ${ALLOY_ENV_VER})
+    require-uboot-variable(uboot-env, "system_platform", ${GRISP_FW_PLATFORM})
+    require-uboot-variable(uboot-env, "system_architecture", ${GRISP_FW_ARCHITECTURE})
+    on-init {
+        error("Rollback is not available or safe in the current state.")
+    }
+}
+
+# This task handles env_ver/platform/architecture mismatches
+task rollback.wrongplatform {
+    on-init {
+        error("Expecting alloy_env_ver=${ALLOY_ENV_VER}, platform=${GRISP_FW_PLATFORM} and architecture=${GRISP_FW_ARCHITECTURE}")
+    }
+}
+
+# Print current update/boot state
+# Running from SD card
+task status.sdcard {
+    require-uboot-variable(uboot-env, "alloy_env_ver", "${ALLOY_ENV_VER}")
+    require-path-at-offset("/", ${SDCARD_ROOTFS_PART_OFFSET})
+    on-init {
+        info("Status: Active=SDCARD, state=n/a, reboot_needed=n/a, validation_needed=n/a, rollback_available=n/a")
+    }
+}
+
+# Validated, no rollback available
+task status.a.validated_no_rollback {
+    # Running A
+    require-uboot-variable(uboot-env, "alloy_env_ver", "${ALLOY_ENV_VER}")
+    require-path-at-offset("/", ${EMMC_ROOTFS_A_PART_OFFSET})
+    require-uboot-variable(uboot-env, "active_system", "a")
+    require-uboot-variable(uboot-env, "valid_system", "a")
+    require-uboot-variable(uboot-env, "upgrade_available", "0")
+    require-uboot-variable(uboot-env, "rollback_available", "0")
+    on-init {
+        info("Status: Active=A, state=validated, reboot_needed=no, validation_needed=no, rollback_available=no")
+    }
+}
+
+task status.b.validated_no_rollback {
+    # Running B
+    require-uboot-variable(uboot-env, "alloy_env_ver", "${ALLOY_ENV_VER}")
+    require-path-at-offset("/", ${EMMC_ROOTFS_B_PART_OFFSET})
+    require-uboot-variable(uboot-env, "active_system", "b")
+    require-uboot-variable(uboot-env, "valid_system", "b")
+    require-uboot-variable(uboot-env, "upgrade_available", "0")
+    require-uboot-variable(uboot-env, "rollback_available", "0")
+    on-init {
+        info("Status: Active=B, state=validated, reboot_needed=no, validation_needed=no, rollback_available=no")
+    }
+}
+
+# Validated, rollback available
+task status.a.validated_with_rollback {
+    # Running A
+    require-uboot-variable(uboot-env, "alloy_env_ver", "${ALLOY_ENV_VER}")
+    require-path-at-offset("/", ${EMMC_ROOTFS_A_PART_OFFSET})
+    require-uboot-variable(uboot-env, "active_system", "a")
+    require-uboot-variable(uboot-env, "upgrade_available", "0")
+    require-uboot-variable(uboot-env, "rollback_available", "1")
+    on-init {
+        info("Status: Active=A, state=validated, reboot_needed=no, validation_needed=no, rollback_available=yes")
+    }
+}
+
+task status.b.validated_with_rollback {
+    # Running B
+    require-uboot-variable(uboot-env, "alloy_env_ver", "${ALLOY_ENV_VER}")
+    require-path-at-offset("/", ${EMMC_ROOTFS_B_PART_OFFSET})
+    require-uboot-variable(uboot-env, "active_system", "b")
+    require-uboot-variable(uboot-env, "upgrade_available", "0")
+    require-uboot-variable(uboot-env, "rollback_available", "1")
+    on-init {
+        info("Status: Active=B, state=validated, reboot_needed=no, validation_needed=no, rollback_available=yes")
+    }
+}
+
+# Upgrade prepared but not yet booted into new system
+task status.a.upgrading {
+    # Running A
+    require-uboot-variable(uboot-env, "alloy_env_ver", "${ALLOY_ENV_VER}")
+    require-path-at-offset("/", ${EMMC_ROOTFS_A_PART_OFFSET})
+    require-uboot-variable(uboot-env, "active_system", "a")
+    require-uboot-variable(uboot-env, "upgrade_available", "1")
+    require-uboot-variable(uboot-env, "valid_system", "a")
+    on-init {
+        info("Status: Active=A, state=pending-upgrade, reboot_needed=yes, validation_needed=pending-reboot, rollback_available=no")
+    }
+}
+
+task status.b.upgrading {
+    # Running B
+    require-uboot-variable(uboot-env, "alloy_env_ver", "${ALLOY_ENV_VER}")
+    require-path-at-offset("/", ${EMMC_ROOTFS_B_PART_OFFSET})
+    require-uboot-variable(uboot-env, "active_system", "b")
+    require-uboot-variable(uboot-env, "upgrade_available", "1")
+    require-uboot-variable(uboot-env, "valid_system", "b")
+    on-init {
+        info("Status: Active=B, state=pending-upgrade, reboot_needed=yes, validation_needed=pending-reboot, rollback_available=no")
+    }
+}
+
+# New system booted (pending validation)
+task status.a.upgraded {
+    # New Active=A (previous valid=B)
+    require-uboot-variable(uboot-env, "alloy_env_ver", "${ALLOY_ENV_VER}")
+    require-path-at-offset("/", ${EMMC_ROOTFS_A_PART_OFFSET})
+    require-uboot-variable(uboot-env, "active_system", "a")
+    require-uboot-variable(uboot-env, "upgrade_available", "1")
+    require-uboot-variable(uboot-env, "valid_system", "b")
+    on-init {
+        info("Status: Active=A, state=pending-validation, reboot_needed=no, validation_needed=yes, rollback_available=no")
+    }
+}
+
+task status.b.upgraded {
+    # New Active=B (previous valid=A)
+    require-uboot-variable(uboot-env, "alloy_env_ver", "${ALLOY_ENV_VER}")
+    require-path-at-offset("/", ${EMMC_ROOTFS_B_PART_OFFSET})
+    require-uboot-variable(uboot-env, "active_system", "b")
+    require-uboot-variable(uboot-env, "upgrade_available", "1")
+    require-uboot-variable(uboot-env, "valid_system", "a")
+    on-init {
+        info("Status: Active=B, state=pending-validation, reboot_needed=no, validation_needed=yes, rollback_available=no")
+    }
+}
+
+# Rollback performed; reboot required to switch to the selected system
+task status.a.rollback_pending_reboot {
+    # Running A, but next boot will switch to B
+    require-uboot-variable(uboot-env, "alloy_env_ver", "${ALLOY_ENV_VER}")
+    require-path-at-offset("/", ${EMMC_ROOTFS_A_PART_OFFSET})
+    require-uboot-variable(uboot-env, "active_system", "a")
+    require-uboot-variable(uboot-env, "upgrade_available", "0")
+    require-uboot-variable(uboot-env, "valid_system", "b")
+    on-init {
+        info("Status: Active=A, state=pending-rollback, reboot_needed=yes, validation_needed=no, rollback_available=no")
+    }
+}
+
+task status.b.rollback_pending_reboot {
+    # Running B, but next boot will switch to A
+    require-uboot-variable(uboot-env, "alloy_env_ver", "${ALLOY_ENV_VER}")
+    require-path-at-offset("/", ${EMMC_ROOTFS_B_PART_OFFSET})
+    require-uboot-variable(uboot-env, "active_system", "b")
+    require-uboot-variable(uboot-env, "upgrade_available", "0")
+    require-uboot-variable(uboot-env, "valid_system", "a")
+    on-init {
+        info("Status: Active=B, state=pending-rollback, reboot_needed=yes, validation_needed=no, rollback_available=no")
+    }
+}
+
+# Environment version mismatch status
+task status.wrongenv {
+    on-init {
+        error("Expecting alloy_env_ver=${ALLOY_ENV_VER}")
     }
 }
