--- a/system_kontron-albl-imx8mm/uboot/uboot.env
+++ b/system_kontron-albl-imx8mm/uboot/uboot.env
@@ -1,3 +1,5 @@
+# A/B Software Update Version
+alloy_env_ver=1
 
 # UBoot addresses
 loadaddr=0x44000000
@@ -30,22 +32,24 @@ active_system=a
 upgrade_available=0
 # Fallback attempt counter
 upgrade_fallback=0
+# Rollback allowed (0|1) - enabled after validation, disabled at upgrade start
+rollback_available=0
 
 # Firmware general information
 system_platform=kontron-albl-imx8mm
 system_architecture=aarch64-unknown-linux-gnu
 
 # System A metadata, set during the upgrade process
-systema_firmware_uuid=""
-systema_firmware_version=""
-systema_firmware_vcs_id=""
-systema_firmware_author=""
+systema_firmware_uuid=
+systema_firmware_version=
+systema_firmware_vcs_id=
+systema_firmware_author=
 
 # System B metadata, set during the upgrade process
-systemb_firmware_uuid=""
-systemb_firmware_version=""
-systemb_firmware_vcs_id=""
-systemb_firmware_author=""
+systemb_firmware_uuid=
+systemb_firmware_version=
+systemb_firmware_vcs_id=
+systemb_firmware_author=
 
 # Custom commands
 
@@ -70,10 +74,12 @@ alloy_bootcmd_mmc0=\
 alloy_bootcmd_mmc1=\
 	devnum=1;\
 	devpart=2;\
+	boot_id=sd-card;\
+	setenv active_system r;\
 	run alloy_boot_simple;
 
 alloy_boot_simple=\
-	setenv bootargs root=/dev/mmcblk${devnum}p3 ${bootargs_base} ${bootargs_extra} alloy.boot_id=sd-card;\
+	setenv bootargs root=/dev/mmcblk${devnum}p3 ${bootargs_base} ${bootargs_extra} alloy.boot_id=${boot_id};\
 	saveenv\
 	if load mmc ${devnum}:${devpart} ${loadaddr} ${image_base}; then\
 		bootm ${loadaddr};\
