Allows the bootloader to be up to 4 MiB

--- a/system_kontron-albl-imx8mm/fwup.conf
+++ b/system_kontron-albl-imx8mm/fwup.conf
@@ -33,12 +33,12 @@ define(SECONDARY_ENV_BIN, "${GRISP_SYSTEM}/images/uboot-env.bin")
 # +----------------------------------------+
 # | Protective MBR + GPT                   |
 # +----------------------------------------+
-# | U-Boot @ offset 33KB (Only on SDCard)  |
+# | U-Boot @ offset 33KB (SDCard & eMMC)   |
 # +----------------------------------------+
 # | U-Boot Env 1 @ 1.875 MiB               |
 # | U-Boot Env 2 @ 1.9375 MiB              |
 # +----------------------------------------+
-# | p0: Secure Enclave (Only on eMMC)      |
+# | p0: Reserved (Only on eMMC)            |
 # +----------------------------------------+
 # | p1: Boot (FAT32)                       |
 # |     fitImage_A/B (On eMMC)             |
@@ -51,35 +51,45 @@ define(SECONDARY_ENV_BIN, "${GRISP_SYSTEM}/images/uboot-env.bin")
 # | p4: Application (f2fs)                 |
 # +----------------------------------------+
 
-# The U-Boot is written directly to the SDCard/eMMC at 33 KiB offset (IMX_BOOT_SEEK)
-define(FLASH_UBOOT_OFFSET, 2)  # 1 KiB = 2 * 512 bytes blocks
-define(SDCARD_UBOOT_OFFSET, 66)  # 33 KiB = 66 * 512 bytes blocks
+# The U-Boot is written directly to the SDCard/eMMC user area at 33 KiB offset (IMX_BOOT_SEEK)
+define(UBOOT_OFFSET, 66)  # 33 KiB = 66 * 512 bytes blocks
 # The max size take into account both the flash and the sdcard,
 # the bootloader starting at 33 KiB offset on sdcard means the bootloader maximum
 # size is 32 KiB lower than what the flash would support.
-define(UBOOT_MAX_SIZE, 3774)  # 0x1E0000 - 33 KiB / 512
+# Bootloader/environment/raw area configuration
+# - UBOOT_BOOT_MAX_COUNT: maximum bootloader size (in 512-byte blocks)
+# - Guard and environment areas placed before the first GPT partition
+define(UBOOT_BOOT_MAX_COUNT, 8192)          # 4 MiB in 512-byte blocks
+define(UBOOT_PRE_ENV_GUARD_COUNT, 256)      # 128 KiB guard before env
 
-# The U-Boot environment on the both SDCard and Flash
+# The U-Boot environment on both SDCard and eMMC user area
 # Dual environment setup for redundancy
-define(UBOOT_ENV_PRIMARY_OFFSET, 3840)    # 1.875 MiB offset (0x1E0000)
-define(UBOOT_ENV_SECONDARY_OFFSET, 3968)  # 1.9375 MiB offset (0x1F0000)
-define(UBOOT_ENV_COUNT, 128)              # 64 KiB (0x10000)
+#
+# Layout before first GPT partition (all values are 512-byte blocks):
+#  66 (33 KiB ROM seek) + UBOOT_BOOT_MAX_COUNT (bootloader)
+#  + UBOOT_PRE_ENV_GUARD_COUNT + [env primary (UBOOT_ENV_COUNT)]
+#  + [env secondary (UBOOT_ENV_COUNT)]
+define(UBOOT_ENV_COUNT, 128)                # 64 KiB (0x10000)
+define-eval(UBOOT_ENV_PRIMARY_OFFSET, "${UBOOT_OFFSET} + ${UBOOT_BOOT_MAX_COUNT} + ${UBOOT_PRE_ENV_GUARD_COUNT}")
+define-eval(UBOOT_ENV_SECONDARY_OFFSET, "${UBOOT_ENV_PRIMARY_OFFSET} + ${UBOOT_ENV_COUNT}")
 
 # Partition sizes
-define(DUMMY_PART_COUNT, 2048)     # 1 MiB
-define(SEC_PART_COUNT, 262144)     # 128 MiB
-define(BOOT_PART_COUNT, 131072)    # 64 MiB
-define(ROOTFS_PART_COUNT, 524288)  # 256 MiB
-define(APP_PART_COUNT, 1048576)    # 512 MiB
+define(DUMMY_PART_COUNT, 2048)              # 1 MiB
+define(RESERVED_PART_COUNT, 262144)         # 128 MiB
+define(BOOT_PART_COUNT, 131072)             # 64 MiB
+define(ROOTFS_PART_COUNT, 524288)           # 256 MiB
+define(APP_PART_COUNT, 1048576)             # 512 MiB
 
 
 # eMMC partition offsets
 
-# Reserve space for a future secure enclave at 4 MiB (before other partitions)
-define(EMMC_SEC_PART_OFFSET, 8192)   # 4 MiB
+# Reserve raw space for bootloader + env up to first GPT partition (aligned to 1 MiB)
+#   First partition offset (blocks) = 10240 (5 MiB)
+#   This leaves room for: 33KiB + 4MiB + guards + 2x64KiB env
+define(EMMC_RESERVED_PART_OFFSET, 10240)    # 5 MiB
 
 # The boot partition contains the fitImage files for A/B boot
-define-eval(EMMC_BOOT_PART_OFFSET, "${EMMC_SEC_PART_OFFSET} + ${SEC_PART_COUNT}")
+define-eval(EMMC_BOOT_PART_OFFSET, "${EMMC_RESERVED_PART_OFFSET} + ${RESERVED_PART_COUNT}")
 
 # Let the rootfs have room to grow up to 256 MiB and align it to the nearest 1 MiB boundary
 define-eval(EMMC_ROOTFS_A_PART_OFFSET, "${EMMC_BOOT_PART_OFFSET} + ${BOOT_PART_COUNT}")
@@ -93,7 +103,7 @@ define-eval(EMMC_APP_PART_OFFSET, "${EMMC_ROOTFS_B_PART_OFFSET} + ${ROOTFS_PART_
 # SDCard partition offsets
 
 # Dummy partition to keep the layout consistent
-define(SDCARD_DUMMY1_PART_OFFSET, 8192)   # 4 MiB
+define(SDCARD_DUMMY1_PART_OFFSET, 10240)    # 5 MiB
 
 # The boot partition contains the fitImage files for A/B boot
 define-eval(SDCARD_BOOT_PART_OFFSET, "${SDCARD_DUMMY1_PART_OFFSET} + ${DUMMY_PART_COUNT}")
@@ -124,7 +134,7 @@ meta-misc = ${GRISP_FW_MISC}
 # upgrade due to the event driven nature of the update system.
 file-resource uboot {
     host-path = ${UBOOT}
-    assert-size-lte = ${UBOOT_MAX_SIZE}
+    assert-size-lte = ${UBOOT_BOOT_MAX_COUNT}
 }
 
 file-resource primary-uboot-env {
@@ -152,11 +162,11 @@ gpt gpt-emmc {
     guid = 01999b2e-3fba-7508-9cd5-a58f16f5350a
 
     partition 0 {
-        block-offset = ${EMMC_SEC_PART_OFFSET}
-        block-count = ${SEC_PART_COUNT}
+        block-offset = ${EMMC_RESERVED_PART_OFFSET}
+        block-count = ${RESERVED_PART_COUNT}
         type = 8da63339-0007-60c0-c436-083ac8230908  # Linux reserved
         guid = 01999b27-85c6-727c-a37b-c1838a5c93fa
-        name = "secure_enclave"
+        name = "reserved"
     }
     partition 1 {
         block-offset = ${EMMC_BOOT_PART_OFFSET}
@@ -236,22 +246,23 @@ uboot-environment uboot-env {
     block-count = ${UBOOT_ENV_COUNT}
 }
 
-# This firmware task perform a factory reset of the board bootloader.
-# This doesn't include the eMMC, use task bootloader for that.
-# Should be performed on device /dev/mtd0 and --unsafe option is required
+# This firmware task perform a factory reset of the board bootloader (SPI NOR).
+# Should be performed on device /dev/null and --unsafe option is required
+# NOTE: Temporary for development until the device boots directly from eMMC.
+#       Remove this task once fuses/boot flow are set for eMMC-only boot.
+#       It is expected to fail if the bootloader image is larger than 2MB - 1k.
 task bootloader {
     # Only match if not mounted
     require-unmounted-destination = true
 
     on-init {
-        info("Starting Kontron AL/BL i.MX8M Mini bootloader initialization")
+        info("Starting Kontron AL/BL i.MX8M Mini bootloader initialization (SPI NOR)")
     }
 
     on-resource uboot {
         info("Flashing U-Boot bootloader...")
-        # Erase the first 480 blocks of the flash
-        # Erase size is 4 KiB, so it will erase up to 0x1E0000
-        execute("flash_erase -q /dev/mtd0 0 480")
+        # Erase the entire SPI NOR device
+        execute("flash_erase -q /dev/mtd0 0 512")
         pipe_write("dd of=/dev/mtd0 bs=512 seek=2 count=3838 conv=sync status=none")
     }
 
@@ -260,9 +271,7 @@ task bootloader {
     }
 }
 
-# This firmware task perform a factory reset of the eMMC.
-# This doesn't include the bootloader and boot environemnt, use task bootloader for that.
-# The uboot environment cannot be used, as it resides on the flash partition.
+# This firmware task performs a factory reset of the eMMC and flashes the bootloader.
 # Should be performed on device /dev/mmcblk0
 task emmc {
     # Only match if not mounted
@@ -280,6 +289,12 @@ task emmc {
         trim(${EMMC_ROOTFS_B_PART_OFFSET}, ${ROOTFS_PART_COUNT})
 
         uboot_clearenv(uboot-env)
+    }
+
+    on-resource uboot {
+        info("Writing U-Boot bootloader to eMMC...")
+        # Write U-Boot at 33KB offset (required by i.MX8MM boot ROM)
+        raw_write(${UBOOT_OFFSET})
     }
 
     on-resource primary-uboot-env {
@@ -358,7 +373,7 @@ task sdcard {
     on-resource uboot {
         info("Writing U-Boot bootloader...")
         # Write U-Boot at 33KB offset (required by i.MX8MM boot ROM)
-        raw_write(${SDCARD_UBOOT_OFFSET})
+        raw_write(${UBOOT_OFFSET})
     }
 
     on-resource primary-uboot-env {
