--- a/system_kontron-albl-imx8mm/rootfs_overlay/etc/fw_env.config
+++ b/system_kontron-albl-imx8mm/rootfs_overlay/etc/fw_env.config
@@ -1,5 +1,5 @@
 # fw_printenv and fw_setenv configuration for Kontron AL/BL i.MX8M Mini
 
 # Device        Offset      Size
-/dev/rootdisk0	0x1E0000	0x10000
-/dev/rootdisk0	0x1F0000	0x10000
+/dev/rootdisk0	0x00428400	0x10000
+/dev/rootdisk0	0x00438400	0x10000
