--- a/system_kontron-albl-imx8mm/uboot/uboot.config
+++ b/system_kontron-albl-imx8mm/uboot/uboot.config
@@ -2,3 +2,6 @@ CONFIG_SYS_LOAD_ADDR=0x44000000
 CONFIG_SYS_BOOTM_LEN=0x10000000
 CONFIG_ENV_IS_IN_MMC=y
 CONFIG_ENV_IS_IN_SPI_FLASH=n
+CONFIG_ENV_SIZE=0x00010000
+CONFIG_ENV_OFFSET=0x00428400
+CONFIG_ENV_OFFSET_REDUND=0x00438400
