OP-TEE testing (not working)

--- a/system_kontron-albl-imx8mm/uboot/uboot.config
+++ b/system_kontron-albl-imx8mm/uboot/uboot.config
@@ -5,3 +5,11 @@ CONFIG_ENV_IS_IN_SPI_FLASH=n
 CONFIG_ENV_SIZE=0x00010000
 CONFIG_ENV_OFFSET=0x00428400
 CONFIG_ENV_OFFSET_REDUND=0x00438400
+CONFIG_OPTEE=y
+CONFIG_OPTEE_LOAD_ADDRESS=0x7e000000
+CONFIG_IMX8M_OPTEE_LOAD_ADDR=0x7e000000
+CONFIG_CMD_OPTEE=y
+CONFIG_LOG=y
+CONFIG_LOG_CONSOLE=y
+CONFIG_SPL_LOG=y
+CONFIG_SPL_LOG_MAX_LEVEL=7
