Add grisp.io helper script

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ samples/hello_grisp/priv
 samples/hello_grisp/rebar.lock
 .DS_Store
 .pki-key
+.grispio.token
 
 # Threse files keep reapearing, and it is not clear why.
 system_common/board/grisp-common/skeleton/var/tmp
